IN PROGRESS - issue HERASAFXACMLCORE-56: Cleanup Findbugs issues http://jira.herasaf.org/browse/HERASAFXACMLCORE-56
all findbugs issues are resolved are excluded (with appropriate comment in exclude file).

git-svn-id: svn://localhost/herasaf-xacmlnew/trunk/herasaf-xacml/herasaf-xacml-core@1464 281314fa-7b5e-d943-bc7f-69d318bcf3fb